--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,39 @@
   <artifactId>zmarthubsrv</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>ZmartHUB server module</name>
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
+  <properties>
+      <maven.compiler.source>1.8</maven.compiler.source>
+      <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
+  <repositories>
+    <repository>
+      <id>Internal repository</id>
+      <url>file://${basedir}/lib</url>
+    </repository>
+  </repositories>
   <dependencies>
+      <dependency>
+          <groupId>net.sf.bluecove</groupId>
+          <artifactId>bluecove</artifactId>
+          <version>2.1.1</version>
+          <scope>provided</scope>
+      </dependency>
+      <dependency>
+          <groupId>net.sf.bluecove</groupId>
+          <artifactId>bluecove-bluez</artifactId>
+          <version>2.1.1</version>
+          <scope>provided</scope>
+      </dependency>
+      <dependency>
+          <groupId>net.sf.bluecove</groupId>
+          <artifactId>bluecove-gpl</artifactId>
+          <version>2.1.1</version>
+      </dependency>
+      <dependency>
+          <groupId>uk.co.caprica</groupId>
+          <artifactId>juds</artifactId>
+          <version>0.94.1</version>
+      </dependency>
   	<dependency>
   		<groupId>org.eclipse.jetty.websocket</groupId>
   		<artifactId>websocket-api</artifactId>
