--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,14 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.zmartify.hub</groupId>
   <artifactId>zmarthubsrv</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <packaging>jar</packaging>
+  <version>0.0.2-SNAPSHOT</version>
   <name>ZmartHUB server module</name>
   <properties>
       <maven.compiler.source>1.8</maven.compiler.source>
       <maven.compiler.target>1.8</maven.compiler.target>
+      <jdk.version>1.8</jdk.version>
+      <junit.version>4.11</junit.version>
   </properties>
   <repositories>
     <repository>
@@ -69,8 +72,36 @@
   	</dependency>
   	<dependency>
   		<groupId>javax.ws.rs</groupId>
-  		<artifactId>jsr311-api</artifactId>
-  		<version>1.1.1</version>
+  		<artifactId>javax.ws.rs-api</artifactId>
+  		<version>2.0</version>
   	</dependency>
   </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <appendAssemblyId>false</appendAssemblyId>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.zmartify.hub.zmarthubsrv.ZmartBTServer</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+  <executions>
+    <execution>
+      <id>make-assembly</id> <!-- this is used for inheritance merges -->
+      <phase>package</phase> <!-- bind to the packaging phase -->
+      <goals>
+        <goal>single</goal>
+      </goals>
+    </execution>
+  </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
