--- a/pom.xml
+++ b/pom.xml
@@ -1,106 +1,96 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.zmartify.hub</groupId>
-  <artifactId>zmarthubsrv</artifactId>
-  <packaging>jar</packaging>
-  <version>0.0.2-SNAPSHOT</version>
-  <name>ZmartHUB server module</name>
-  <properties>
-      <maven.compiler.source>1.8</maven.compiler.source>
-      <maven.compiler.target>1.8</maven.compiler.target>
-      <jdk.version>1.8</jdk.version>
-      <junit.version>4.11</junit.version>
-  </properties>
-  <repositories>
-    <repository>
-      <id>Internal repository</id>
-      <url>file://${basedir}/lib</url>
-    </repository>
-  </repositories>
-  <dependencies>
-      <dependency>
-          <groupId>net.sf.bluecove</groupId>
-          <artifactId>bluecove</artifactId>
-          <version>2.1.1</version>
-          <scope>provided</scope>
-      </dependency>
-      <dependency>
-          <groupId>net.sf.bluecove</groupId>
-          <artifactId>bluecove-bluez</artifactId>
-          <version>2.1.1</version>
-          <scope>provided</scope>
-      </dependency>
-      <dependency>
-          <groupId>net.sf.bluecove</groupId>
-          <artifactId>bluecove-gpl</artifactId>
-          <version>2.1.1</version>
-      </dependency>
-      <dependency>
-          <groupId>uk.co.caprica</groupId>
-          <artifactId>juds</artifactId>
-          <version>0.94.1</version>
-      </dependency>
-  	<dependency>
-  		<groupId>org.eclipse.jetty.websocket</groupId>
-  		<artifactId>websocket-api</artifactId>
-  		<version>9.4.7.v20170914</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.slf4j</groupId>
-  		<artifactId>slf4j-simple</artifactId>
-  		<version>1.7.25</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.fasterxml.jackson.core</groupId>
-  		<artifactId>jackson-databind</artifactId>
-  		<version>2.9.2</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.github.hypfvieh</groupId>
-  		<artifactId>dbus-java</artifactId>
-  		<version>2.7.3</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>io.reactivex.rxjava2</groupId>
-  		<artifactId>rxjava</artifactId>
-  		<version>2.1.6</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.eclipse.jetty</groupId>
-  		<artifactId>jetty-client</artifactId>
-  		<version>9.4.7.v20170914</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>javax.ws.rs</groupId>
-  		<artifactId>javax.ws.rs-api</artifactId>
-  		<version>2.0</version>
-  	</dependency>
-  </dependencies>
-
+<project 
+    xmlns="http://maven.apache.org/POM/4.0.0" 
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.zmartify.hub</groupId>
+    <artifactId>zmarthubsrv</artifactId>
+    <packaging>jar</packaging>
+    <version>0.0.2-SNAPSHOT</version>
+    <name>ZmartHUB server module</name>
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <jdk.version>1.8</jdk.version>
+        <junit.version>4.11</junit.version>
+    </properties>
+    <repositories>
+        <repository>
+            <id>Internal repository</id>
+            <url>file://${basedir}/lib</url>
+        </repository>
+    </repositories>
+    <dependencies>
+        <dependency>
+            <groupId>net.sf.bluecove</groupId>
+            <artifactId>bluecove</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.bluecove</groupId>
+            <artifactId>bluecove-bluez</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>uk.co.caprica</groupId>
+            <artifactId>juds</artifactId>
+            <version>0.94.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty.websocket</groupId>
+            <artifactId>websocket-api</artifactId>
+            <version>9.4.7.v20170914</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.hypfvieh</groupId>
+            <artifactId>dbus-java</artifactId>
+            <version>2.7.3</version>
+        </dependency>
+        <dependency>
+            <groupId>io.reactivex.rxjava2</groupId>
+            <artifactId>rxjava</artifactId>
+            <version>2.1.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-client</artifactId>
+            <version>9.4.7.v20170914</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <configuration>
-                    <appendAssemblyId>false</appendAssemblyId>
-                    <archive>
-                        <manifest>
-                            <mainClass>com.zmartify.hub.zmarthubsrv.ZmartBTServer</mainClass>
-                        </manifest>
-                    </archive>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                </configuration>
-  <executions>
-    <execution>
-      <id>make-assembly</id> <!-- this is used for inheritance merges -->
-      <phase>package</phase> <!-- bind to the packaging phase -->
-      <goals>
-        <goal>single</goal>
-      </goals>
-    </execution>
-  </executions>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <finalName>${project.artifactId}</finalName>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <manifestEntries>
+                                        <Main-Class>com.zmartify.hub.zmarthubsrv.ZmartBTServer</Main-Class>
+                                        <Build-Number>123</Build-Number>
+                                    </manifestEntries>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
