--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
             <version>2.1.1</version>
         </dependency>
         <dependency>
+            <groupId>net.sf.bluecove</groupId>
+            <artifactId>bluecove-gpl</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+        <dependency>
             <groupId>uk.co.caprica</groupId>
             <artifactId>juds</artifactId>
             <version>0.94.1</version>
